Changed the url of image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <img src="Mimage.jpg" alt="MY IMAGE" height="200">
+        <img src="Resources\Mimage.jpg" alt="MY IMAGE" height="200">
         <br>
         <h1><em>JAY GEHLOT</em></h1>
         <h3>BSc Computer Science and Data Analytics @ IIT Patna | Data Analyst | Machine Learning | Big Data | Excel | Power bi | AI</h3>
