Changed  Education section content

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     </style>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div>
         <img src="Resources\Mimage.jpg" alt="MY IMAGE" height="200">
         <br>
         <h1><em>JAY GEHLOT</em></h1>
-        <h3>BSc Computer Science and Data Analytics @ IIT Patna | Data Analyst | Machine Learning | Big Data | Excel | Power bi | AI</h3>
+        <h3>BSc Computer Science and Data Analytics @ IIT Patna | CGPA : 6.82 </h3>
     </div>
+
     <div>
         <h2>
             <u>ABOUT ME</u>
@@ -31,6 +33,7 @@
             Let's connect and explore the future of data!
         </p>
     </div>
+
     <div>
         <h2>
             <u>SKILLS</u>
@@ -47,6 +50,7 @@
             <li>PROBLEM SOLVING</li>
         <ul>
     </div>
+    
     <div>
         <h2>
             <u>SKILLS</u>
