Made education headline 2 bold

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <img src="Resources\Mimage.jpg" alt="MY IMAGE" height="200">
         <br>
         <h1><em>JAY GEHLOT</em></h1>
+        <h2>
+            <u>EDUCATION</u>
+        </h2>
         <h3>BSc Computer Science and Data Analytics @ IIT Patna | CGPA : 6.82 </h3>
     </div>
 
