Added Projects, Experience and Achievements section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,20 @@
     
     <div>
         <h2>
-            <u>SKILLS</u>
+            <u>PROJECTS</u>
         </h2> 
+    </div>
+
+    <div>
+        <h2>
+            <u>EXPERIENCE</u>
+        </h2>
+    </div>
+
+    <div>
+        <h2>
+            <u>ACHIEVEMENTS</u>
+        </h2>
     </div>
 </body>
 </html>
