Ordered lists for skills section

--- a/index.html
+++ b/index.html
@@ -40,18 +40,32 @@
     <div>
         <h2>
             <u>SKILLS</u>
-        </h2> 
-        <ul>
-            <li>Data analysis</li>
-            <li>Advanced Excel</li>
-            <li>Power bi</li>
-            <li>Python</li>
-            <li>Machine Learning</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>GIT & GITHUB</li>
-            <li>PROBLEM SOLVING</li>
-        <ul>
+        </h2>
+
+        <ol>
+            <li><h3>Technical Skills : </h3></li>
+            <ul>
+                <li>Data analysis</li>
+                <li>Advanced Excel</li>
+                <li>Power bi</li>
+                <li>Python</li>
+                <li>Machine Learning</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>GIT & GITHUB</li>
+            <ul>
+        </ol>
+        <ol>
+            <li><h3>Soft Skills : </h3></li>
+            <ul>
+                <li>Teamwork</li>
+                <li>Communication</li>
+                <li>Problem-solving</li>
+                <li>Adaptability</li>
+                <li>Work ethic</li>
+            </ul>
+        </ol>
+
     </div>
     
     <div>
